<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hozo</string>
    <string name="tv_guide_setting">Cài đặt để chỉ hiện thị công việc bạn mong muốn</string>
    <string name="advance_setting_title">Bộ lọc nâng cao</string>
    <string name="other_profile">Cá nhân</string>
    <string name="other_condition">Điều khoản sử dụng</string>
    <string name="other_nad">Chính sách bảo mật</string>
    <string name="other_share">Chia sẻ với bạn bè</string>
    <string name="other_about">Về Hozo</string>
    <string name="tv_login_policy">Nhấn \"Tiếp tục\" đồng nghĩa với bạn đồng ý với điều khoản sử dụng và chính sách bảo mật của chúng tôi.</string>
    <string name="login_policy_condition">điều khoản sử dụng</string>
    <string name="login_policy_nad">chính sách bảo mật</string>
    <string name="login_block_phone">Lỗi vượt quá số lần đăng nhập trong 1 ngày. Vui lòng trở lại sau 24h tiếp theo.</string>
    <string name="login_status_block">block_phone_via_otp</string>
    <string name="edit_profile_tv_header">Sửa đổi thông tin</string>
    <string name="select_task_title">Đăng việc</string>
    <string name="browse_task_title">Tìm việc</string>
    <string name="my_task_title">Việc của tôi</string>
    <string name="other_title">Khác</string>
    <string name="profile_log_out">Thoát tài khoản</string>
    <string name="tv_task_title">Tiêu đề công việc</string>
    <string name="post_a_task_name_error">Vui lòng nhập ít nhất 10 ký tự</string>
    <string name="post_a_task_date_error">Vui lòng nhập \n thời gian bắt đầu làm việc</string>
    <string name="notify_title">Thông báo</string>
    <string name="err_pick_image">Vui lòng chọn ít nhất 1 ảnh</string>
    <string name="my_task_worker">Việc nhận</string>
    <string name="my_task_poster">Việc đăng</string>
    <string name="make_an_offer_title">Chi tiết</string>
    <string name="msg_logOut">Bạn muốn thoát ?</string>
    <string name="attach_img_title">Chọn ảnh đính kèm</string>
    <string name="attach_img_source"> Chọn nguồn </string>
    <string name="attach_img_camera">Máy ảnh</string>
    <string name="attach_img_gallery">Bộ sưu tập</string>
    <string name="preview_image_title">Xem ảnh</string>
    <string name="rate">Đánh giá</string>
    <string name="just_image">just_image</string>
    <string name="adjust_image">adjust_image</string>
    <string name="tv_time_task">Giờ bắt đầu</string>
    <string name="task_description_hint">Mô tả thêm</string>
    <string name="age_from_hint">18 ~ 60</string>
    <string name="edit_profile_name">HỌ TÊN</string>
    <string name="edit_profile_address">ĐỊA CHỈ</string>
    <string name="edit_profile_birth">NGÀY SINH</string>
    <string name="camera">take picture</string>
    <string name="content_description_back">Trở lại</string>
    <string name="crop_image_title">Chỉnh sửa</string>
    <string name="crop_image_done">Tiếp tục</string>
    <string name="report_task_content_hint">Hãy cho chúng tôi biết lý do khác của bạn là gì</string>
    <string name="next">Tiếp tục</string>
    <string name="call">Gọi</string>
    <string name="done">Hoàn thành</string>
    <string name="work_detail_view_bit">Ứng Tuyển</string>
    <string name="type_your_text">Bình luận</string>
    <string name="assign">Giao việc</string>
    <string name="cancel_task">Hủy việc</string>
    <string name="recruitment">Ứng tuyển</string>
    <string name="received">Đã nhận</string>
    <string name="delivered">Đã giao</string>
    <string name="gallery">Gallery</string>
    <string name="share_task">Tìm Việc</string>
    <string name="search">Tìm kiếm</string>
    <string name="btn_reset">Mặc định</string>
    <string name="profile_worker">Người làm việc</string>
    <string name="profile_hire">Người đăng việc</string>
    <string name="profile_address">ĐỊA CHỈ</string>
    <string name="profile_phone">ĐIỆN THOẠI</string>
    <string name="content_description_send">Gửi</string>
    <string name="post_a_task_budget_error">Vui lòng nhập\ngiá tiền</string>
    <string name="post_a_task_max_attach_err">Bạn chỉ được chọn tối đa 6 ảnh</string>
    <string name="max_image_attach_err">Bạn chỉ được chọn tối đa %1$d ảnh</string>
    <string name="select_age_title">Chọn Tuổi</string>
    <string name="select_age_to">Đến</string>
    <string name="ok">OK</string>
    <string name="oke">CÓ</string>
    <string name="select_age_error">Mức tuổi bạn chọn không chính xác,vui lòng sửa lại</string>
    <string name="alert_dialog_title">Hủy thao tác</string>
    <string name="alert_dialog_content">Bạn có chắc chắn muốn dừng thao tác này</string>
    <string name="alert_dialog_yes">CÓ</string>
    <string name="alert_dialog_no">KHÔNG</string>
    <string name="post_a_task_complete">Chúc mừng bạn đã đăng tuyển thành công!</string>
    <string name="draft_a_task_complete">Lưu việc thành công!</string>
    <string name="user_account">Thông tin cá nhân</string>
    <string name="retry_title">Lỗi kết nối.</string>
    <string name="retry_content">Không thể kết nối tới máy chủ. Vui lòng kiểm tra kết nối của bạn và thử lại.</string>
    <string name="retry">THỬ LẠI</string>
    <string name="text_test">Text Test</string>
    <string name="just_now">Vừa xong</string>
    <string name="minute_ago">1 phút trước</string>
    <string name="minutes_ago">phút trước</string>
    <string name="hour_ago">1 giờ trước</string>
    <string name="hours_ago">giờ trước</string>
    <string name="yesterday">hôm qua</string>
    <string name="days_ago">ngày trước</string>
    <string name="month_ago">tháng trước</string>
    <string name="msg_contten_logOut">Bạn có chắc chắn muốn đăng xuất?</string>
    <string name="empty" />
    <string name="comment_report">Thông báo tin nhắn xấu</string>
    <string name="bid_success">Chúc mừng ứng tuyển của bạn đã thành công. Vui lòng để ý thông báo cho trạng thái công việc.</string>
    <string name="report_title">Lý do báo cáo</string>
    <string name="report_spam_much">Spam quá nhiều</string>
    <string name="report_language_bad">Ngôn ngữ không phù hợp</string>
    <string name="report_policy">Vi phạm điều khoản sử dụng</string>
    <string name="report_other">Lý do khác</string>
    <string name="report_cancel">HỦY</string>
    <string name="report_ok">CHỌN</string>
    <string name="report_reason_other_title">Lý do khác</string>
    <string name="btn_report_send">GỬI</string>
    <string name="number_remain_footer">%1$d vị trí \n còn trống</string>
    <string name="number_employ_footer_des">người \n được thuê</string>
    <string name="number_bit_footer_des">người \n ứng tuyển</string>
    <string name="call_err">Rất tiếc điện thoại của bạn không hỗ trợ chức năng gọi điện</string>
    <string name="title_cancel_task">Hủy việc</string>
    <string name="cancel_task_ok">CÓ</string>
    <string name="cancel_task_cancel">KHÔNG</string>
    <string name="task_type">Loại công việc</string>
    <string name="gender_male">male</string>
    <string name="gender_female">female</string>
    <string name="gender_male_vn">Nam</string>
    <string name="gender_female_vn">Nữ</string>
    <string name="empty_content_comment_error">Vui lòng nhập nội dung</string>
    <string name="rate_msg_no_content_error">Vui lòng chọn sao đánh giá</string>
    <string name="brower_task_map_activity">Bản đồ công việc</string>
    <string name="notification_comment_received">đã bình luận công việc</string>
    <string name="notification_related" tools:ignore="PluralsCandidate">và %1$d người khác</string>
    <string name="notification_comment_replied">đã trả lời bình luận công việc</string>
    <string name="notification_bidder_canceled">đã hủy ứng tuyển ở việc</string>
    <string name="notification_bid_received">đã ứng tuyển ở việc</string>
    <string name="notification_task_reminder">bạn được giao sắp đến giờ đi làm</string>
    <string name="notification_task_completed">đã hoàn thành.</string>
    <string name="notification_task_completed_bidder">đã hoàn thành.</string>
    <string name="notification_task_reopen">mà bạn ứng tuyển trước đó vừa được mở lại</string>
    <string name="notification_cancel_bid">đã hủy chọn bạn</string>
    <string name="notification_await_approval">đã đến lúc duyệt người làm</string>
    <string name="notification_review_received_matcher">không hoàn thành</string>
    <string name="notification_comment_received_matcher">bình luận</string>
    <string name="notification_comment_replied_matcher">trả lời</string>
    <string name="notification_bidder_canceled_matcher">hủy ứng tuyển</string>
    <string name="notification_bid_received_matcher">ứng tuyển</string>
    <string name="notification_bid_accepted_matcher">được giao việc</string>
    <string name="notification_task_reminder_matcher">sắp đến giờ</string>
    <string name="notification_poster_canceled_matcher">bị hủy</string>
    <string name="notification_task_completed_matcher">hoàn thành</string>
    <string name="notification_task_overdue_matcher">quá hạn</string>
    <string name="notification_bid_missed_matcher">không được giao việc</string>
    <string name="notification_task_reopen_matcher">mở lại</string>
    <string name="notification_cancel_bid_matcher">hủy chọn</string>
    <string name="notification_enough_bidder_matcher">đủ người ứng tuyển</string>
    <string name="notification_review_poster_matcher">yêu cầu xác nhận</string>
    <string name="notification_review_worker_matcher">hoàn thành</string>
    <string name="notification_await_approval_matcher">duyệt người làm</string>
    <string name="notification_review_received_color">#00A2E5</string>
    <string name="notification_comment_received_color">#00A2E5</string>
    <string name="notification_comment_replied_color">#00A2E5</string>
    <string name="notification_bidder_canceled_color">#FF3100</string>
    <string name="notification_bid_received_color">#00A2E5</string>
    <string name="notification_bid_accepted_color">#00A2E5</string>
    <string name="notification_task_reminder_color">#00A2E5</string>
    <string name="notification_poster_canceled_color">#FF3100</string>
    <string name="notification_task_completed_color">#00A2E5</string>
    <string name="notification_task_overdue_color">#FF3100</string>
    <string name="notification_enough_bidder_color">#00A2E5</string>
    <string name="hozo_all">Tất cả</string>
    <string name="hot_line">02473004886</string>
    <string name="share">Chia sẻ việc</string>
    <string name="detete_task">Xóa việc</string>
    <string name="re_create_task">Sao chép việc</string>
    <string name="report_task">Báo xấu việc</string>
    <string name="tv_date_task">Ngày làm</string>
    <string name="edit_task">Chỉnh sửa việc</string>
    <string name="follow_task">Theo dõi việc</string>
    <string name="setting_distance">Khoảng cách</string>
    <string name="unit">VNĐ</string>
    <string name="t2">T2</string>
    <string name="tues_day">T3</string>
    <string name="wed_day">T4</string>
    <string name="thur_day">T5</string>
    <string name="fri_day">T6</string>
    <string name="sat_day">T7</string>
    <string name="sun_day">CN</string>
    <string name="support_phone_title">Điện thoại</string>
    <string name="order_by">Hiển thị danh sách công việc theo</string>
    <string name="interest">Mức độ quan tâm</string>
    <string name="create_at_post">Thời gian đăng việc </string>
    <string name="date_start">Thời gian làm việc</string>
    <string name="order">Chiều hiển thị</string>
    <string name="reduction">Chiều giảm</string>
    <string name="augment">Chiều tăng</string>
    <string name="invite_post_task">Giới thiệu bạn bè Đăng việc để nhận ngay</string>
    <string name="invite_price">vào ví tiền Hozo</string>
    <string name="invite_web_detail">Xem chi tiết tại đây</string>
    <string name="invite_promotion_code">Mã giới thiệu của bạn</string>
    <string name="invite_link_share">Chia sẻ Link giới thiệu</string>
    <string name="all_or">Hoặc</string>
</resources>