<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">

    <item
        android:id="@+id/share"
        android:title="@string/share" />

    <item
        android:id="@+id/cancel_task"
        android:title="@string/cancel_task"/>

    <item
        android:id="@+id/delete_task"
        android:title="@string/detete_task"/>

    <item
        android:id="@+id/create_task"
        android:title="@string/re_create_task"/>

    <item
        android:id="@+id/report_task"
        android:title="@string/report_task"/>

    <item
        android:id="@+id/edit_task"
        android:title="@string/edit_task"/>

    <item
        android:id="@+id/follow_task"
        android:title="@string/follow_task"/>

</menu>
