<?xml version="1.0" encoding="utf-8"?>
<vn.tonish.hozo.view.ExpandableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_detail_time"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radio_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <vn.tonish.hozo.view.RadioButtonHozo
                android:id="@+id/radio_all_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_background"
                android:checked="true"
                android:padding="5dp"
                android:text="@string/hozo_all"
                android:textColor="@color/tv_gray_new"
                android:textSize="@dimen/tv_size_medium" />

            <vn.tonish.hozo.view.RadioButtonHozo
                android:id="@+id/radio_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:button="@drawable/radio_button_background"
                android:checked="false"
                android:padding="5dp"
                android:text="@string/tv_date_task"
                android:textColor="@color/tv_gray_new"
                android:textSize="@dimen/tv_size_medium" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <vn.tonish.hozo.view.TextViewHozo
                android:id="@+id/tv_monday"
                style="@style/week_day_style"
                android:text="@string/t2" />

            <vn.tonish.hozo.view.TextViewHozo
                android:id="@+id/tv_tuesday"
                style="@style/week_day_style"
                android:text="@string/tues_day" />

            <vn.tonish.hozo.view.TextViewHozo
                android:id="@+id/tv_wednesday"
                style="@style/week_day_style"
                android:text="@string/wed_day" />

            <vn.tonish.hozo.view.TextViewHozo
                android:id="@+id/tv_thursday"
                style="@style/week_day_style"
                android:text="@string/thur_day" />

            <vn.tonish.hozo.view.TextViewHozo
                android:id="@+id/tv_friday"
                style="@style/week_day_style"
                android:text="@string/fri_day" />

            <vn.tonish.hozo.view.TextViewHozo
                android:id="@+id/tv_saturday"
                style="@style/week_day_style"
                android:text="@string/sat_day" />

            <vn.tonish.hozo.view.TextViewHozo
                android:id="@+id/tv_sunday"
                style="@style/week_day_style"
                android:text="@string/sun_day" />
        </LinearLayout>
    </LinearLayout>


</vn.tonish.hozo.view.ExpandableLayout>