<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:weightSum="3">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/img_support_tab_focus"
            android:contentDescription="@string/just_image" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e8f0f0"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <vn.tonish.hozo.view.TextViewHozo
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/support_phone_title"
            android:textColor="@color/tv_gray_new" />

        <vn.tonish.hozo.view.TextViewHozo
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/hot_line"
            android:textSize="30sp"
            android:textStyle="bold" />

        <vn.tonish.hozo.view.ButtonHozo
            android:id="@+id/btn_call"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_new_selector"
            android:text="@string/call"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>