<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/alert_dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_dialog_bg"
    android:orientation="vertical">

    <vn.tonish.hozo.view.TextViewHozo
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:text="@string/alert_dialog_title"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <vn.tonish.hozo.view.TextViewHozo
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/alert_dialog_content"
        android:textColor="@color/tv_gray"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="end">

        <vn.tonish.hozo.view.TextViewHozo
            android:id="@+id/tv_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/alert_dialog_no"
            android:textColor="@color/hozo_bg"
            android:textSize="14sp" />

        <vn.tonish.hozo.view.TextViewHozo
            android:id="@+id/tv_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp"
            android:text="@string/alert_dialog_yes"
            android:textColor="@color/hozo_red"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>