<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/hozo_bg">

        <vn.tonish.hozo.view.TextViewHozo
            style="@style/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/img_back"
            android:layout_toRightOf="@+id/img_back"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/other_share" />

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="?android:attr/actionBarSize"
            android:layout_height="?android:attr/actionBarSize"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_back"
            android:focusable="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:contentDescription="@string/just_image"
        android:src="@drawable/invite_frend" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <vn.tonish.hozo.view.TextViewHozo
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/invite_post_task"
                android:textColor="@color/setting_text"
                android:textSize="@dimen/tv_size_medium" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <vn.tonish.hozo.view.TextViewHozo
                    android:id="@+id/tv_invite_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/hozo_bg"
                    android:textSize="@dimen/invite_price"
                    android:textStyle="bold" />

                <vn.tonish.hozo.view.TextViewHozo
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/tv_invite_price"
                    android:layout_toRightOf="@id/tv_invite_price"
                    android:text="@string/unit"
                    android:textColor="@color/hozo_bg"
                    android:textSize="@dimen/tv_size_xxtiny" />

            </RelativeLayout>


            <vn.tonish.hozo.view.TextViewHozo
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/invite_price"
                android:textColor="@color/setting_text"
                android:textSize="@dimen/tv_size_medium" />

            <vn.tonish.hozo.view.TextViewHozo
                android:id="@+id/invite_web"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_gray_corners"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/invite_web_detail"
                android:textColor="@color/hozo_bg"
                android:textSize="@dimen/tv_size_nomal" />

            <vn.tonish.hozo.view.TextViewHozo
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/invite_promotion_code"
                android:textColor="@color/tv_black_new"
                android:textSize="@dimen/tv_size_medium"
                android:textStyle="bold" />

            <vn.tonish.hozo.view.TextViewHozo
                android:id="@+id/invite_promotion_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_wallet"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/tv_black_new"
                android:textSize="@dimen/invite_promotion_code"
                android:textStyle="bold" />

            <vn.tonish.hozo.view.TextViewHozo
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/all_or"
                android:textColor="@color/setting_text"
                android:textSize="@dimen/tv_size_medium" />

            <vn.tonish.hozo.view.TextViewHozo
                android:id="@+id/invite_link_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_wallet"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/invite_link_share"
                android:textColor="@color/tv_black_new"
                android:textSize="@dimen/tv_size_medium"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>